Fixed Dev tile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,6 @@ div.developer {
   padding: 6px;
   text-align: center;
 }
+div.developer-container {
+  text-align: center;
+}
